--- a/src/package.json
+++ b/src/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
     "@prisma/client": "^6.3.0",
+    "@vercel/postgres": "^0.10.0",
     "next": "15.1.6",
     "pg": "^8.13.1",
     "react": "^19.0.0",
