--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.3.0",
     "@vercel/postgres": "^0.10.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.4.2",
     "next": "15.1.6",
     "pg": "^8.13.1",
     "react": "^19.0.0",
