--- a/src/package.json
+++ b/src/package.json
@@ -14,6 +14,7 @@
     "@vercel/postgres": "^0.10.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.2",
+    "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "pg": "^8.13.1",
     "react": "^19.0.0",
