--- a/src/package.json
+++ b/src/package.json
@@ -20,6 +20,7 @@
     "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "sass": "^1.85.0",
     "use-debounce": "^10.0.4",
     "zod": "^3.24.1"
