--- a/src/package.json
+++ b/src/package.json
@@ -23,7 +23,8 @@
     "react-markdown": "^10.1.0",
     "sass": "^1.85.0",
     "use-debounce": "^10.0.4",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
