--- a/src/package.json
+++ b/src/package.json
@@ -21,6 +21,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
+    "rehype-highlight": "^7.0.2",
+    "rehype-sanitize": "^6.0.0",
+    "remark-footnotes": "^4.0.1",
+    "remark-gfm": "^4.0.1",
     "sass": "^1.85.0",
     "use-debounce": "^10.0.4",
     "zod": "^3.24.1",
